--- a/Fody.Tests/packages.config
+++ b/Fody.Tests/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Mono.Cecil" version="0.9.5.3" />
   <package id="Moq" version="4.0.10827" targetFramework="net40" />
-  <package id="NUnit" version="2.6.0.12054" />
+  <package id="NUnit" version="2.6.2" targetFramework="net40" />
 </packages>
