--- a/FodyIsolated/packages.config
+++ b/FodyIsolated/packages.config
@@ -1,3 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+	<package id="Caseless.Fody" version="1.1.0.0" targetFramework="net40" />
+	<package id="Virtuosity.Fody" version="1.16.0.0" targetFramework="net40" />
 </packages>
