--- a/Fody/packages.config
+++ b/Fody/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caseless.Fody" version="1.1.0.0" targetFramework="net40" />
+  <package id="Stamp.Fody" version="0.1.1.0" targetFramework="net40" />
   <package id="Virtuosity.Fody" version="1.16.0.0" targetFramework="net40" />
 </packages>
