fix copy paste error

--- a/Fody.targets
+++ b/Fody.targets
@@ -33,7 +33,7 @@
 		  KeyFilePath="$(KeyOriginatorFile)" 
 		  MessageImportance="$(FodyMessageImportance)"
 		  ProjectPath="$(ProjectPath)" 
-		  SolutionDir="$(SolutionDir)" 
+		  SolutionDir="$(FodySolutionDir)" 
 		  References="@(ReferencePath)" 
       />
     <Copy 
