--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@
 ##  If you have NuGet Package Restore enabled, uncomment this
 packages/
 ForSample/
+ChocolateyNuGetBuild/
 
 # Visual Studio profiler
 *.psess
