--- a/ChocolateyNuGet/ChocolateyNuget.csproj
+++ b/ChocolateyNuGet/ChocolateyNuget.csproj
@@ -27,9 +27,14 @@
     <MakeDir Directories="$(SolutionDir)ChocolateyNuGetBuild" />
     <Copy SourceFiles="$(ProjectDir)Fody.nuspec" DestinationFolder="$(SolutionDir)ChocolateyNuGetBuild" />
     <Copy SourceFiles="$(ProjectDir)chocolateyInstall.ps1" DestinationFolder="$(SolutionDir)ChocolateyNuGetBuild\Tools" />
+    <Copy SourceFiles="$(SolutionDir)FodyVSPackage\bin\$(ConfigurationName)\FodyVSPackage.vsix" DestinationFolder="$(SolutionDir)ChocolateyNuGetBuild\Tools" />
     <PepitaPackage.WeavingTask NuGetBuildDirectory="$(SolutionDir)ChocolateyNuGetBuild" MetadataAssembly="$(SolutionDir)Fody\bin\$(ConfigurationName)\Fody.dll" />
   </Target>
   <ItemGroup>
+    <ProjectReference Include="..\FodyVSPackage\FodyVSPackage.csproj">
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <Name>Fody</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Fody\Fody.csproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
       <Name>Fody</Name>
