--- a/ChocolateyNuGet/ChocolateyNuget.csproj
+++ b/ChocolateyNuGet/ChocolateyNuget.csproj
@@ -4,12 +4,24 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{63786CE5-D899-43DF-AD4E-C2CA3BAC3FC2}</ProjectGuid>
+    <ProductVersion>12.0.0</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <OutputType>Exe</OutputType>
+    <AssemblyName>ChocolateyNuget</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <ConfigurationName>Debug</ConfigurationName>
+    <OutputPath>bin\Debug</OutputPath>
+    <DebugType>none</DebugType>
+    <WarningLevel>4</WarningLevel>
+    <Optimize>False</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <ConfigurationName>Release</ConfigurationName>
+    <OutputPath>bin\Release</OutputPath>
+    <DebugType>none</DebugType>
+    <WarningLevel>4</WarningLevel>
+    <Optimize>False</Optimize>
   </PropertyGroup>
   <ItemGroup>
     <None Include="Fody.nuspec">
@@ -33,11 +45,13 @@
   <ItemGroup>
     <ProjectReference Include="..\FodyVSPackage\FodyVSPackage.csproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-      <Name>Fody</Name>
+      <Name>FodyVSPackage</Name>
+      <Project>{2356DD30-B9AC-48ED-A0A1-103382A9CFC3}</Project>
     </ProjectReference>
     <ProjectReference Include="..\Fody\Fody.csproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
       <Name>Fody</Name>
+      <Project>{64880F43-E6C1-428E-B00A-E0374697B5CF}</Project>
     </ProjectReference>
   </ItemGroup>
 </Project>
